--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,10 @@ body {
   display: flex;
   flex-direction: column;
 }
-
+.header-logo {
+  width: 75px;
+  height: 75px;
+}
 .user-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -31,6 +34,7 @@ body {
   box-shadow: 0 6px 20px rgba(76, 110, 245, 0.18);
   transition: transform 0.25s ease, box-shadow 0.25s ease;
   cursor: pointer;
+  font-family: "Poppins", sans-serif;
 }
 
 .user-card:hover {
@@ -384,6 +388,25 @@ body {
 .modal-btn.confirm:hover {
   background: #f1f5ff;
 }
+@media (max-width: 750) {
+  .modal-card {
+    width: auto;
+    max-width: 250px;
+    padding: 1.3rem 1.5rem;
+  }
+
+  .modal-title {
+    font-size: 1.25rem;
+  }
+
+  .modal-text {
+    font-size: 0.75rem;
+  }
+
+  .modal-icon {
+    font-size: 2.75rem;
+  }
+}
 
 .home-container {
   min-height: 100vh;
@@ -476,6 +499,16 @@ body {
   font-weight: 500;
   transition: opacity 0.2s;
 }
+.user-detail-save-back-filled {
+  padding: 0.75rem;
+  background: #4c6ef5;
+  color: #fff;
+  border: 1px solid #4c6ef5;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+  transition: opacity 0.2s;
+}
 .header {
   width: 100%;
   background: linear-gradient(90deg, #4c6ef5, #15aabf);
@@ -495,13 +528,18 @@ body {
   align-items: center;
   color: white;
 }
-
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 0.05rem;
+}
 .header-title {
   margin: 0;
   font-weight: 700;
   font-size: 1.5rem;
   letter-spacing: 0.5px;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+  font-family: "Poppins", sans-serif;
 }
 
 .header-btn {
@@ -514,6 +552,7 @@ body {
   cursor: pointer;
   font-weight: 500;
   transition: 0.25s ease, transform 0.25s ease;
+  font-family: "Poppins", sans-serif;
 }
 
 .header-btn:hover {
