--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -156,7 +156,17 @@ body {
   border-color: #4c6ef5;
   box-shadow: 0 0 10px rgba(76, 110, 245, 0.5);
 }
+.input-error {
+  border-color: #e00;
+  background-color: #fff0f0;
+}
 
+.error-text {
+  color: #e00;
+  font-size: 0.875rem;
+  margin-top: 4px;
+  display: block;
+}
 .submit-btn {
   padding: 1rem;
   border: none;
@@ -423,7 +433,7 @@ body {
   border: 1px solid #eceef1;
 }
 .user-detail-page {
-  min-height: 100vh;
+  min-height: 83vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -449,16 +459,16 @@ body {
   font-size: 1.5rem;
   color: #fff;
   font-weight: bold;
-  margin-bottom: 1.5rem; /* Form ile aradaki boşluk */
+  margin-bottom: 1.5rem;
 }
 
 .user-detail-input,
 .user-detail-btn {
   width: 100%;
-  padding: 0.7rem 0.9rem; /* input padding’i ile aynı */
+  padding: 0.7rem 0.9rem;
   border-radius: 8px;
   font-size: 0.95rem;
-  box-sizing: border-box; /* padding + border hesaplama */
+  box-sizing: border-box;
 }
 
 .user-detail-input {
@@ -483,28 +493,24 @@ body {
   display: inline-block;
 }
 
-/* Kaydet butonu */
 .user-detail-save-btn {
   background: #4c6ef5;
   color: #fff;
   border-color: #4c6ef5;
 }
 
-/* Geri butonu (dolgu yok) */
 .user-detail-save-back {
   background: #f8fafc;
   color: #4c6ef5;
   border-color: #4c6ef5;
 }
 
-/* Geri butonu (dolu) */
 .user-detail-save-back-filled {
   background: #4c6ef5;
   color: #fff;
   border-color: #4c6ef5;
 }
 
-/* Hover efektleri */
 .user-detail-save-btn:hover,
 .user-detail-save-back:hover,
 .user-detail-save-back-filled:hover {
@@ -524,21 +530,23 @@ body {
 .header-container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 1.5rem;
+  padding: 0 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
+  max-height: 50px;
 }
 .header-left {
   display: flex;
   align-items: center;
   gap: 0.05rem;
+  cursor: pointer;
 }
 .header-title {
   margin: 0;
   font-weight: 700;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   letter-spacing: 0.5px;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
   font-family: "Poppins", sans-serif;
